--- a/index.html
+++ b/index.html
@@ -86,23 +86,24 @@
           </ul>
         </div>
       </section>
-      <section class="section-icon">
+      <section class="section">
         <div class="container">
           <h2 class="heading">Чем мы занимаемся</h2>
+          <div class="container-all">
+            <ul class="list">
+              <li>
+                <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
+              </li>
 
-          <ul class="list-icon">
-            <li>
-              <img src="./images/box1.jpg" alt="Примеры работ" width="370" />
-            </li>
+              <li>
+                <img src="./images/box2.jpg" alt="Примеры работ" width="370" />
+              </li>
 
-            <li>
-              <img src="./images/box2.jpg" alt="Примеры работ" width="370" />
-            </li>
-
-            <li>
-              <img src="./images/box3.jpg" alt="Примеры работ" width="370" />
-            </li>
-          </ul>
+              <li>
+                <img src="./images/box3.jpg" alt="Примеры работ" width="370" />
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="section-team">
