--- a/index.html
+++ b/index.html
@@ -13,27 +13,33 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="container page-header">
-      <nav class="main-nav">
-        <a href="/" class="logo link"><span class="accent">Web</span>Studio </a>
-        <ul class="site-nav list">
-          <li>
-            <a href="" class="link">Студия</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li>
-            <a href="" class="link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="link-nav">
+    <header class="page-header">
+      <div class="container header-container">
+        <nav class="main-nav">
+          <a href="/" class="logo link"
+            ><span class="accent">Web</span>Studio
+          </a>
+          <ul class="site-nav list">
+            <li>
+              <a href="" class="link">Студия</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li>
+              <a href="" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
         <ul class="auth-nav list">
           <li>
             <a href="mailto:info@example.com" class="link"
@@ -48,10 +54,12 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="subject">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="subject">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="button">Заказать услугу</button>
+        </div>
       </section>
-      <section class="section">
+      <section class="section benefits">
         <div class="container">
           <h2 class="hidden">Наше преимущество</h2>
           <ul class="list">
@@ -152,16 +160,22 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
-      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@example.com" class="link">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="link">+380991111111</a>
-        </li>
-      </ul>
+      <div class="container">
+        <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
+        <div class="address-container">
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="auth-nav list">
+            <li>
+              <a href="mailto:info@example.com" class="link"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380991111111" class="link">+380991111111</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
