--- a/portfolio.html
+++ b/portfolio.html
@@ -13,29 +13,33 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="container page-header">
-      <nav class="main-nav">
-        <a href="./index.html" class="logo link"
-          ><span class="accent">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li>
-            <a href="./index.html" class="link">Студия</a>
-          </li>
-          <li>
-            <a href="#" class="link">Портфолио</a>
-          </li>
-          <li>
-            <a href="#" class="link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="link-nav">
+    <header class="page-header">
+      <div class="container header-container">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo link"
+            ><span class="accent">Web</span>Studio</a
+          >
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li>
+              <a href="#" class="link">Портфолио</a>
+            </li>
+            <li>
+              <a href="#" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
         <ul class="auth-nav list">
           <li>
             <a href="mailto:info@example.com" class="link"
@@ -51,30 +55,32 @@
 
     <main>
       <section class="section">
-        <h1 class="hidden">Наши работы</h1>
-        <div class="link-container">
-          <ul class="filter list">
-            <li class="item">
-              <button type="button" class="button pointer">Все</button>
-            </li>
-            <li class="item">
-              <button type="button" class="button pointer">Веб-сайты</button>
-            </li>
-            <li class="item">
-              <button type="button" class="button pointer">Приложения</button>
-            </li>
-            <li class="item">
-              <button type="button" class="button pointer">Дизайн</button>
-            </li>
-            <li class="item">
-              <button type="button" class="button pointer">Маркетинг</button>
-            </li>
-          </ul>
+        <div class="container">
+          <h1 class="hidden">Наши работы</h1>
+          <div class="link-container">
+            <ul class="filter list">
+              <li class="item">
+                <button type="button" class="button pointer">Все</button>
+              </li>
+              <li class="item">
+                <button type="button" class="button pointer">Веб-сайты</button>
+              </li>
+              <li class="item">
+                <button type="button" class="button pointer">Приложения</button>
+              </li>
+              <li class="item">
+                <button type="button" class="button pointer">Дизайн</button>
+              </li>
+              <li class="item">
+                <button type="button" class="button pointer">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
       <section class="section-content">
-        <div class="img-container">
+        <div class="container img-container">
           <ul class="list">
             <li>
               <a href="" class="link">
@@ -153,16 +159,18 @@
     </main>
 
     <footer class="page-footer">
-      <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
-      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@example.com" class="link">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="link">+380991111111</a>
-        </li>
-      </ul>
+      <div class="container">
+        <a href="/" class="logo link"><span class="accent">Web</span>Studio</a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="auth-nav list">
+          <li>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="link">+380991111111</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
